Fixed bug
1. (Style Bug) some elements outside the SideNav covers the SideNav when
   they overlaps, due to missing the z-index property.

2. (Style Bug) SideNav background-color is transparent, causing users
   can still see other elements outside the Sidenav when the SideNav has
   covered them up.

--- a/assets/index.css
+++ b/assets/index.css
@@ -12,7 +12,7 @@ body, html {
     --sidebar-width: 280px;
 
     --border-radius: 5px;
-    --box-shadow: 1px 1px 5px var(--border-color);
+    --box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 
     display: flow-root;
     margin: 0;
@@ -39,6 +39,8 @@ body, html {
     box-shadow: var(--box-shadow);
     border-top-right-radius: var(--border-radius);
     border-bottom-right-radius: var(--border-radius);
+    z-index: 1000;
+    background-color: white;
 }
 
 #sidebar > h1 {
